--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-fastapi==0.115.12
-groq==0.24.0
-motor==3.7.0
-openai==1.78.1
-Pillow==11.2.1
-pydantic==2.11.4
-pymongo==4.12.1
-python-dotenv==1.1.0
-together==1.5.8
-uvicorn==0.34.2
-ffmpeg-python==0.2.0
 cloudinary==1.44.0
-python-multipart
-passlib[bcrypt]
-python-jose[cryptography]
-email-validator
+fastapi==0.115.12
+groq==0.26.0
+motor==3.7.1
+openai==1.83.0
+passlib==1.7.4
+Pillow==11.2.1
+protobuf==6.31.1
+pydantic==2.11.5
+pymongo==4.13.0
+python-dotenv==1.1.0
+python_jose==3.5.0
+together==1.5.8
+uvicorn==0.34.3
+google-genai
